--- a/popup.css
+++ b/popup.css
@@ -32,6 +32,30 @@ progress {
     width: 90%;
 }
 
+.score-section p {
+    margin: 8px 0;
+    font-size: 16px;
+    color: #333;
+  }
+  
+  .score-section p:first-child {
+    font-weight: bold;
+    font-size: 18px;
+  }
+
+  .score-section p:second-child {
+    font-weight: bold;
+    font-size: 18px;
+  }
+  
+  .score-section progress {
+    width: 100%;
+    height: 20px;
+    border-radius: 10px;
+    margin: 12px 0;
+    overflow: hidden;
+  }
+
 .tab-section {
     border: 2px solid grey;
     height: 50px;
@@ -45,6 +69,23 @@ progress {
 .tab-section button {
     width: 50%;
     height: 100%;
+}
+
+.tab-section .active {
+    background-color: grey;
+}
+
+.overview, .detail {
+    display: none;
+    min-height: 200px; 
+    width: 500px;
+    border: 1px solid #ddd;
+    padding: 15px; 
+    background-color: #f9f9f9; 
+}
+
+.active-div {
+    display: block;
 }
 
 .overview li{
